<?xml version="1.0"?>
<package format="2">
    <name>atlas_drone</name>
    <version>0.1.0</version>
    <description>The atlas_drone package</description>

    <maintainer email="mail@berkaydursun.com">Ahmet Berkay Dursun</maintainer>
    <maintainer email="wmrmzn@gmail.com">Ramazan Vapurcu</maintainer>

    <license>Apache 2.0</license>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_export_depend>roscpp</build_export_depend>
    <exec_depend>roscpp</exec_depend>

    <!--
    <build_depend>dji_sdk</build_depend>
    <exec_depend>dji_sdk</exec_depend>
    -->

    <build_depend>message_generation</build_depend>
    <exec_depend>message_runtime</exec_depend>

    <build_depend>octomap</build_depend>
    <build_depend>libpcl-all-dev</build_depend>

    <export>
    <!-- Other tools can request additional information be placed here -->
    </export>
</package>
